syntax = "proto3";

package proto;

option go_package = "github.com/polarismesh/polaris-go/plugin/location/remoteservice/proto";

message LocationRequest {
  string client_ip = 1 [json_name = "client_ip"];
}

message LocationResponse {
  string region = 1;
  string zone = 2;
  string campus = 3;
}

service Location {
  // 获取客户端地理位置信息
  rpc GetLocation(LocationRequest) returns(LocationResponse) {}
}